# clld-glottologfamily-plugin

./: .coveragerc  .gitignore  .travis.yml  MANIFEST.in  README.md  RELEASING.md  setup.cfg  setup.py  tox.ini
clld_glottologfamily_plugin/: __init__.py  datatables.py  models.py  util.py
clld_glottologfamily_plugin/templates/family/: detail_html.mako
clld_glottologfamily_plugin/tests/: fixtures.py  test_functional.py
src/clld_glottologfamily_plugin/: __init__.py  util.py
tests/: conftest.py  test_functional.py
