[metadata]
name = clld-glottologfamily-plugin
version = 4.1.0
author = Robert Forkel
author_email = dlce.rdm@eva.mpg.de
description = A clld plugin adding language family information from Glottolog
long_description = file: README.md
long_description_content_type = text/markdown
keywords = web pyramid clld
license = Apache 2.0
license_files = LICENSE
url = https://github.com/clld/clld-glottologfamily-plugin
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: Apache Software License

[options]
zip_safe = False
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    clld>=7.0
    sqlalchemy
    zope.interface
    pybtex
    pyglottolog>=2.0
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
clld_glottologfamily_plugin =
    templates/*

[options.extras_require]
dev =
    flake8
    wheel
    build
    twine
test =
    pytest>=5
    pytest-mock
    pytest-cov
    pytest-clld
    coverage>=4.2
    webtest

[bdist_wheel]
universal = 1

[flake8]
ignore = E711,E712,D100,D101,D103,D102,D301
max-line-length = 100
exclude = .tox

[tool:pytest]
minversion = 5
testpaths = tests
addopts =
    --cov
filterwarnings =
    ignore::sqlalchemy.exc.SAWarning
    ignore::sqlalchemy.exc.RemovedIn20Warning

[coverage:run]
source =
    clld_glottologfamily_plugin
    tests

[coverage:report]
show_missing = true
skip_covered = true

[easy_install]
zip_ok = false

[tox:tox]
envlist = py38, py39, py310, py311, py312
isolated_build = true
skip_missing_interpreter = true

[testenv]
deps = .[test]
commands = pytest {posargs}
